--- a/Purchasing.Web/Views/Order/Request.cshtml
+++ b/Purchasing.Web/Views/Order/Request.cshtml
@@ -8,7 +8,7 @@
 @{
     Bundles.Reference("~/Css/single/fileuploader/fileuploader.css");
     Bundles.Reference("~/Css/single/chosen.css");
-    Bundles.Reference("~/Css/single/orderrequest.css"); //Can't get this to work, so added the style below
+    Bundles.Reference("~/Css/single/orderrequest.css", pageLocation: "special");
     
     Bundles.Reference("scripts/public/order");
 }
@@ -28,18 +28,7 @@
         });
 
     </script>
-    
-    <style type="text/css">
-        .single-column {width: 1215px;}
-        .orders-right {width: 995px;}
 
-        form input.quantity[type="text"] {width: 50px;}
-        form input.description[type="text"] {min-width: 300px; width: 90%;}
-        form input.price[type="text"], #shipping, #tax, #freight {width: 60px;}
-        form input.catalog-num[type="text"] { width: 106px;}
-        
-        #order-account-section .details-option {width: 30%;}
-    </style>
 
 }
 
