--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     
     @Bundles.RenderStylesheets()
     @Bundles.RenderStylesheets(pageLocation: "common")
+    @Bundles.RenderStylesheets(pageLocation: "special")
 
 	<style type="text/css">
 		#branding
