--- a/Purchasing.Web/Views/Order/Edit.cshtml
+++ b/Purchasing.Web/Views/Order/Edit.cshtml
@@ -7,7 +7,7 @@
 @{
     Bundles.Reference("~/Css/single/fileuploader/fileuploader.css");
     Bundles.Reference("~/Css/single/chosen.css");
-    //Bundles.Reference("~/Css/single/orderrequest.css", pageLocation:"special");
+    Bundles.Reference("~/Css/single/orderrequest.css", pageLocation:"special");
     
     Bundles.Reference("scripts/public/order");
 }
