--- a/Purchasing.Web/Views/Order/_ReviewFpdComplete.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewFpdComplete.cshtml
@@ -3,7 +3,7 @@
 @if (Model.CanEditFdpCompleted)
 {
     <section class="ui-corner-all display-form">
-        <header class="ui-corner-top ui-widget-header showInNav">FDP Completed Status </header>
+        <header class="ui-corner-top ui-widget-header showInNav">FPD Completed Status </header>
         <div class="section-text">
             <p>This is used for matching up P Card purchases with the DaFIS/KFS FPD documents</p>    
         </div>
