--- a/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
@@ -8,4 +8,5 @@
         <option data-bind="value: id, text: text, attr: { title: title }"></option>
     </select>
     <input data-bind="value: project, splitName: 'Project'" type="text" placeholder="Proj" class="account-projectcode" maxlength="10"/>
+    <input data-bind="value: reference, splitName: 'Reference'" type="text" placeholder="Ref" class="account-reference" maxlength="8"/>
 </div>
