--- a/Purchasing.Web/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderDetails.cshtml
@@ -47,6 +47,7 @@
                             <option data-bind="value: id, text: text, attr: { title: title }"></option>
                         </select>
                         <input data-bind="value: project" name="Project" type="text" placeholder="Proj" class="account-projectcode" maxlength="10"/>
+                        <input data-bind="value: reference" name="Reference" type="text" placeholder="Ref" class="account-reference" maxlength="8"/>
                     </div>
 				</div>
 
