--- a/Purchasing.Web/Views/History/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/History/AdminOrders.cshtml
@@ -7,7 +7,11 @@
     ViewBag.LoadFixedHeaders = true;
     ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}-- recent changes make take up to five minutes to process. Press F5 to refresh.", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
     ViewBag.LastRefresh = string.Format("Results current as of {0}", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
-    
+    ViewBag.LoadTableTools = true;
+
+    Bundles.Reference("scripts/public/single/TableTools.js");
+    Bundles.Reference("scripts/public/single/ZeroClipboard.js");
+    Bundles.Reference("scripts/public/single/RearrangeDataTable.js");
     Bundles.Reference("Scripts/public/single/FixedHeader.js");
 }
 
