Suggested change to the help text
for the Order's conditional approval section.

--- a/Purchasing.Web/Views/Order/_ConditionalApprovals.cshtml
+++ b/Purchasing.Web/Views/Order/_ConditionalApprovals.cshtml
@@ -8,9 +8,8 @@
         <div class="section-contents">
         
             <div class="section-text">
-                <p>
-                    Please answer the following questions. Incorrectly answering questions may delay processing of your request and even result in request cancellation.
-                </p>    
+                <p>Answering "Yes" to the following question(s) will route your purchase request for additional review.</p>
+                <p>Incorrectly answering questions may delay processing of your request and even result in request cancellation.</p>    
             </div>
             <div>
                 <ul>
