--- a/Purchasing.Web/Views/Report/Index.cshtml
+++ b/Purchasing.Web/Views/Report/Index.cshtml
@@ -99,6 +99,7 @@
         <header class="ui-corner-top ui-widget-header">Reports</header>
         <div class="section-contents">
             @ContainerFor("Workload Report By Workgroup", "Workload")
+            @ContainerFor("Purchaser Daily Workload", "PurchaserWorkLoad")
             @ContainerFor("Purchaser Processing Time Report By Workgroup", "ProcessingTime")
             @ContainerFor("Permissions Report", "Permissions")
             <div style="clear: both;"></div>
