--- a/Purchasing.Web/Views/Workgroup/AddAddress.cshtml
+++ b/Purchasing.Web/Views/Workgroup/AddAddress.cshtml
@@ -27,14 +27,27 @@
 	                minLength: 2,
 	                select: function (event, ui) {
 
-	                    $("#WorkgroupAddress_BuildingCode").val(ui.item.id); 
+	                    $("#WorkgroupAddress_BuildingCode").val(ui.item.id);
+	                    $("#building-code-display").html(ui.item.id);
+	                    $("#building-code-display").removeClass("red");
+	                    //$("#building-code-display").removeClass("green");
+	                    $("#building-code-display").addClass("green");
 	                    
 	                },
 	                change: function(event, ui) {
 
 	                    if (ui.item == null) {
 	                        $("#WorkgroupAddress_BuildingCode").val("");
-	                    }	                    
+	                        $("#building-code-display").html("Warning Not a Valid Building");
+	                        //$("#building-code-display").removeClass("red");	                    
+	                        $("#building-code-display").removeClass("green");
+	                        $("#building-code-display").addClass("red");
+	                    } else {
+	                        $("#building-code-display").html(ui.item.id);
+	                        $("#building-code-display").removeClass("red");
+	                        //$("#building-code-display").removeClass("green");
+	                        $("#building-code-display").addClass("green");
+	                    }
 	                }
 	            });
 
