--- a/Purchasing.Web/Views/Workgroup/Addresses.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Addresses.cshtml
@@ -20,9 +20,10 @@
 			<th>
 				Name
 			</th>
-			<th>
-				Building
-			</th>
+		    <th>
+		        Building
+		    </th>
+            <th>Building Code</th>
 			<th>
 				Room
 			</th>
@@ -59,9 +60,13 @@
 			<td>
                 @Html.ActionLink(item.Name, "AddressDetails", "Workgroup", new {id=item.Workgroup.Id, addressid = item.Id}, new {})
 			</td>
-			<td>
-				@item.Building
-			</td>
+		    <td>
+		        @item.Building
+		    </td>
+		    <td>
+		        @Html.Encode(item.BuildingCode != null ? item.BuildingCode.Id : string.Empty)		        
+
+		    </td>
 			<td>
 				@item.Room
 			</td>
