Building code warning on shipping address dialog

--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -154,7 +154,14 @@
                             <div class="fn">@Model.Order.DeliverTo</div>
                             <div class="email"><a href="mailto: @Model.Order.DeliverToEmail ">@Model.Order.DeliverToEmail</a></div>
                             <div class="adr">
-                                <span class="street-address">@Model.Address.Room @Model.Address.Building</span>
+                                @if (Model.Address.BuildingCode == null)
+                                {
+                                    <span class="street-address">@Model.Address.Room <span class="red" title="This building does not have a valid building code">@Model.Address.Building</span></span>
+                                }
+                                else
+                                { 
+                                    <span class="street-address">@Model.Address.Room @Model.Address.Building</span>
+                                }                                
                                 <span class="street-address">@Model.Address.Address</span>
                                 <span class="locality">@Model.Address.City</span>
                                 <span class="region" title="California">@Model.Address.State</span>
