--- a/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
@@ -24,8 +24,11 @@
                     <input id="address-building" name="address-building" type="text" placeholder="Building" maxlength="50" />
                     <input id="address-buildingcode" name="address-buildingcode" type="hidden" />
                     <span data-valmsg-for="address-building" data-valmsg-replace="true"></span>
-                    <span>Building Code: </span>
-                    <span id="building-code-display" class="display-details green"></span>
+                </div>
+            </li>
+            <li>
+                <div style="margin-left: 126px;">
+                    <span id="building-code-display" class="display-details"></span>
                 </div>
             </li>
             <li>
