--- a/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
@@ -24,9 +24,8 @@
 	            select: function (event, ui) {
 
 	                $("#WorkgroupAddress_BuildingCode").val(ui.item.id);
-	                $("#building-code-display").html(ui.item.id);
+	                $("#building-code-display").html("Building Code: " + ui.item.id);
 	                $("#building-code-display").removeClass("red");
-	                //$("#building-code-display").removeClass("green");
 	                $("#building-code-display").addClass("green");
 
 	            },
@@ -35,13 +34,11 @@
 	                if (ui.item == null) {
 	                    $("#WorkgroupAddress_BuildingCode").val("");
 	                    $("#building-code-display").html("Warning Not a Valid Building");
-	                    //$("#building-code-display").removeClass("red");	                    
 	                    $("#building-code-display").removeClass("green");
 	                    $("#building-code-display").addClass("red");
 	                } else {
-	                    $("#building-code-display").html(ui.item.id);
+	                    $("#building-code-display").html("Building Code: " + ui.item.id);
 	                    $("#building-code-display").removeClass("red");
-	                    //$("#building-code-display").removeClass("green");
 	                    $("#building-code-display").addClass("green");
 	                }
 	            }
@@ -101,17 +98,20 @@ Example: Dinosaur 1  *@
                     @Html.EditorFor(model => model.WorkgroupAddress.Building)
                     @Html.Hidden("WorkgroupAddress.BuildingCode", Model.WorkgroupAddress.BuildingCode != null ? Model.WorkgroupAddress.BuildingCode.Id : string.Empty)
                     @Html.ValidationMessageFor(model => model.WorkgroupAddress.Building)
-                    <span>Building Code: </span>
+                </div>
+            </li>
+                <li>
+                    <div style="margin-left: 126px;">
                         @if (Model.WorkgroupAddress.BuildingCode != null)
                         {
-                            <span id="building-code-display" class="display-details green">@Model.WorkgroupAddress.BuildingCode.Id</span>
+                            <span id="building-code-display" class="display-details green">@Html.Encode("Building Code: " + Model.WorkgroupAddress.BuildingCode.Id)</span>
                         }
                         else
                         {
                             <span id="building-code-display" class="display-details red">Warning Not a Valid Building</span>
                         }
-                </div>
-            </li>
+                    </div>
+                </li>
             <li>
                 <div class="editor-label">
                     @Html.LabelFor(model => model.WorkgroupAddress.Room) 
