--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Create.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Create.cshtml
@@ -28,14 +28,14 @@
     <header class="ui-widget-header ui-corner-top">Departmental Admin Training Class</header>
     <div class="section-contents">
         <div class="section-text">	
-            <p>Before we grant the access you are requesting, you must first take our training class. The link below will list the available classes.</p>
-            <p>If you are a Shared Service Center Participant, they may have a specific class they would like you to take.</p>
+            <p>Before we grant the access you are requesting, you must first take our training. For specific instructions, please click on the link below.</p>
+            <p>If you are a Shared Service Center Participant, you should contact them in addition to filling out this form as they have specific instructions.</p>
         </div>
     
         <ul>
             <li>
                 <div>
-                    <a href="http://www.hr.ucdavis.edu/sdps/catalog/business-and-operations/pre-purchasing-administrative-training" target="_blank"><strong>Register for Class</strong></a>
+                    <strong>@Html.ActionLink("Instructions", "Instructions", null, new{target="_blank"})</strong>
                 </div>
             </li>
         </ul>        
